项目管理/v018/USER_TEST_GUIDE.md
# 用户验收测试指南 - 键盘自动化序列播放器

> 最后更新：2026-07-16 | 当前阶段：阶段 2 单 JSON 键盘测试宏（待用户验收）

---

## 新手上路：第一次怎么用这个程序

> 如果你是第一次接触这个项目，请按以下顺序操作。

### 第一步：找到程序

程序在电脑的这个位置：
```
桌面 > 1-test > 1-自动连点器 > my-automation-tool > main.py
```
完整路径：`C:\Users\s\Desktop\1-test\1-自动连点器\my-automation-tool\main.py`

### 第二步：启动程序

**方法一（最简单）**：双击 `main.py` 文件
**方法二**：在终端（PowerShell）中运行：
```
cd C:\Users\s\Desktop\1-test\1-自动连点器\my-automation-tool
python main.py
```

启动后你会看到一个窗口，标题是 "MyAutoPlayer - 键盘自动化序列播放器"。
窗口顶部有一行大字，默认显示红色文字："[红] 热键已禁用"

### 第三步：窗口长什么样

```
+-------------------------------------------------------+
| MyAutoPlayer - 键盘自动化序列播放器                      |
+-------------------------------------------------------+
|                                                       |
|         [红] 热键已禁用  或  [绿] 热键已启用            |
|                                                       |
|          MyAutoPlayer 已启动                           |
|                                                       |
|          按 F12 启用热键                               |
|          按住 F9 在记事本中打出 hello world             |
|          （鼠标不要在程序窗口内）                        |
|                                                       |
+-------------------------------------------------------+
```

### 第四步：按键说明

| 按键 | 功能 | 备注 |
|------|------|------|
| F12 | 切换热键启用/禁用 | 按一次启用，再按一次禁用。任何时候都能按 |
| F9 | 按住循环执行小写 hello world；松开停止 | 只有启用状态下、鼠标不在窗口内时才能触发 |
| Alt+F4 | 关闭窗口 | 关闭后自动清理钩子，不会有残留 |

### 第五步：测试前准备

1. 打开一个**记事本**（按 Win 键，输入"记事本"）
2. 把记事本窗口和程序窗口**并排摆放**，两个窗口都能看到
3. 确认程序窗口顶部显示**红色**的"热键已禁用"

---

## 阶段 1.0 安全机制 - 你只需要检查这 7 步

> 测试前：关闭所有正在运行的其他 Python 程序（如果有）

| # | 操作 | 期望结果 | 打勾 |
|---|------|---------|------|
| 1 | 双击运行 main.py（或终端 python main.py） | 程序弹出，顶部显示红色文字 [红] 热键已禁用 | [ ] |
| 2 | 打开记事本，光标放在里面，按 F9 键 | 记事本上不出现任何文字（因为热键还没启用）| [ ] |
| 3 | 回到程序窗口，按 F12 键 | 顶部红色文字变为绿色 [绿] 热键已启用 | [ ] |
| 4 | 切换到记事本，光标放在里面，按住再松开 F9 | 按住时循环输出；松开后停止并显示红色结束提示 | [ ] |
| 5 | 将鼠标移到程序窗口内（不要点记事本），按 F9 键 | hello world 不输出（焦点抑制）| [ ] |
| 6 | 按 F12 键 | 顶部文字变回红色 [红] 热键已禁用 | [ ] |
| 7 | 关闭程序窗口 | 程序窗口消失，无 python 进程残留 | [ ] |
| 8 | 打开任务管理器（Ctrl+Shift+Esc），检查有没有 python.exe 进程 | 没有 python.exe 进程 = 清理干净 | [ ] |

> 全部通过 = 安全机制达标，可以进入下一阶段

### 测试失败了怎么办？

| 现象 | 可能原因 | 解决办法 |
|------|---------|---------|
| 双击 main.py 没反应 | Python 没装好，或没关联 .py 文件 | 用方法二：终端运行 python main.py |
| 窗口一闪就没了 | 代码有报错 | 告诉 AI "窗口一闪就没了"，AI 会查日志 |
| 按 F12 没反应 | 被其他软件占用了 F12 | 关掉录屏软件、浏览器等再试 |
| 按 F9 没出 hello world | 热键还在禁用状态，或鼠标在窗口内 | 确认顶部文字是绿色，且鼠标不在窗口中 |
| 关闭窗口后任务管理器还有 python.exe | 钩子没清理干净 | 终端运行：Get-Process -Name python \| Stop-Process -Force；告诉 AI 这个情况 |

---

## 阶段 1：Hello World 基础功能 - 待本轮修复后重新验证

F9 长按重复触发的问题已由日志确认。修复后，AI 会先完成自动化测试；你只需按本指南的第 4 步确认“按住运行、松开停止、两种 OSD 提示”是否正确。

---

## 阶段 2：JSON 键盘测试宏（历史验收通过）

JSON 测试宏已完成历史验收；当前程序不再加载 JSON，而是加载 Python 宏。

## 阶段 3：Python 宏（请现在验收）

测试文件为 `scripts/hello_world.py`。每次按 F9 启动前都会重新读取已保存 Python 源码，因此修改后**不需要重启程序**。

| # | 操作 | 期望结果 | 打勾 |
|---|------|---------|------|
| 1 | 双击 `main.py` | 顶部为红色“热键已禁用” | [ ] |
| 2 | 按 F12 | 顶部变为绿色“热键已启用” | [ ] |
| 3 | 打开记事本并放好光标，鼠标移出程序窗口 | 已满足热键触发条件 | [ ] |
| 4 | 将 Python 文件的 `COUNT` 改为 `1`，按 Ctrl+S 保存；不重启，轻按并松开 F9 | 记事本完整输出一次小写 `hello world`，出现绿色后红色结束提示 | [ ] |
| 5 | 将 Python 文件的 `COUNT` 改为 `0`，按 Ctrl+S 保存；不重启，按住 F9 | 持续输出小写 `hello world` | [ ] |
| 6 | 松开 F9 | 出现红色停止提示，之后不再输出 | [ ] |
| 7 | 再次按住 F9 后按 F12 | 输出立即停止，顶部恢复红色，并显示“全局脚本已禁用” | [ ] |

异常时只需告诉 AI：按了什么、看到了什么；AI 读取 `logs/app.log` 排查。

---

## 阶段 3：脚本引擎（需你手动测试）

### 3.1 JSON 配置脚本
| # | 操作 | 期望结果 | 打勾 |
|---|------|---------|------|
| 1 | AI 在 scripts/ 目录下放好 JSON 脚本 | 程序左侧列表能看到脚本名称 | [ ] |
| 2 | 点击脚本，看到右侧显示详情 | 显示正常 | [ ] |
| 3 | 点击启用/开关 | 脚本的状态正确切换 | [ ] |
| 4 | 按绑定的热键 | 按 JSON 中定义的 sequence 自动执行 | [ ] |
| 5 | 修改 JSON 中的 speed_factor 为 2.0 并重载 | 脚本按 2 倍速执行 | [ ] |

### 3.2 Python 自定义脚本
| # | 操作 | 期望结果 | 打勾 |
|---|------|---------|------|
| 1 | AI 在 scripts/ 放一个 .py 脚本 | 程序能正确识别并显示 | [ ] |
| 2 | 按绑定热键 | 脚本中的 run(player) 逻辑正确执行 | [ ] |
| 3 | 故意在脚本中写一个错误 | 状态栏显示错误提示，日志中记录异常 | [ ] |
| 4 | 修复脚本错误，重新加载 | 脚本正确执行 | [ ] |

---

## 阶段 4：完整热键管理（需你手动测试）
| # | 操作 | 期望结果 | 打勾 |
|---|------|---------|------|
| 1 | 创建两个脚本，分别绑 F9 和 F10 | 两个热键各自正确触发 | [ ] |
| 2 | 把两个脚本绑到同一个热键 | 程序应提示冲突，不重复注册 | [ ] |
| 3 | 松开启动模式 | 已移除，不作为后续阶段功能 | [ ] |
| 4 | 测试 DOWN 模式（按住持续执行） | 按住持续发键，松开停止 | [ ] |
| 5 | 测试 SWITCH 模式（切换启动/停止）| 第一次按开始循环，再按停止 | [ ] |

---

## 阶段 5：UI 界面（需你手动测试）
| # | 操作 | 期望结果 | 打勾 |
|---|------|---------|------|
| 1 | 程序启动 | 界面风格类似 Quickinput | [ ] |
| 2 | 点击脚本列表中的脚本 | 右侧显示该脚本详情 | [ ] |
| 3 | 在右侧编辑 JSON 脚本 | 保存后生效 | [ ] |
| 4 | 配置热键（点 KeyEdit 控件，按一个键）| 控件正确捕获按键 | [ ] |
| 5 | 设置执行次数为 3 次 | 脚本执行 3 次后自动停止 | [ ] |
| 6 | 设置速度倍率为 0.5 倍 | 执行速度减半 | [ ] |

---

## 阶段 6-8：高级功能（待 AI 完成后加入）

---

## 已知注意事项
1. 管理员权限：部分游戏需要以管理员身份运行程序才能用 SendInput 发送按键
2. 被其他程序占用热键：如果 F9/F12 没反应，可能被其他软件（如录屏软件）占用了
3. 程序没反应时：打开任务管理器，杀掉所有 python.exe 进程，重启程序
4. 残留钩子紧急清理：在终端运行 Get-Process -Name python | Stop-Process -Force
5. 查看运行日志：日志文件在 my-automation-tool/logs/app.log，用记事本打开
